tests/NormalTests/paczka2/big_fuzzy/86689147.err
Error in line 11: A774 S864 268,57
Error in line 6: l49TNc A774 49,1
Error in line 18: A774 S46 93,6
Error in line 27: l49TNc A774 98,8
Error in line 24: A774 A774 189,2
Error in line 29: l49TNc S800 69,2
Error in line 39: l49TNc S46 67,1
Error in line 41: A774 A774 9,1
Error in line 35: qWvyF2cpvu S46 35,6
Error in line 46: qWvyF2cpvu S800 28,5
Error in line 71: Quq6 S8** 1*,*
Error in line 80: erINka7RmAm S800 58,5
Error in line 84: erINka7RmAm S46 40,0
Error in line 88: qWvyF2cpvu A774 278,8
Error in line 87: erINka7RmAm A774 99,4
Error in line 95: ytpPHGCD S46 67,0
Error in line 98: pA7JIXBCHx6 S46 90,1
Error in line 82: A774 S864 10,3
Error in line 105: pA7JIXBCHx6 S864 59,6
Error in line 109: A774 A774 32,8
Error in line 102: erINka7RmAm S800 2,4
Error in line 128: l4/TNc S46 8,6
Error in line 117: erINka7RmAm S864 16,5
Error in line 120: Quq6 S800 14,5
Error in line 126: l49TNc S46 37,2
Error in line 143: ytpPHGCD S46 65,2
Error in line 148: A774 S46 12,6
Error in line 166: l49TNc S864 87,9
Error in line 151: ytpPHGCD S46 65,1
Error in line 168: A774 S864 72,8
Error in line 178: A774 S46 71,5
Error in line 184: erINka7RmAm S46 29,5
Error in line 192: Quq6 S800 78,2
Error in line 201: l49TNc S864 61,6
Error in line 194: Quq6 A774 8,5
Error in line 204: Quq6 S864 94,6
Error in line 212: A774 A774 99,3
Error in line 216: ytpPHGCD S46 70,2
Error in line 225: Quq6 S46 53,8
Error in line 227: A774 S46 75,9
Error in line 232: l49TNc S46 0,3
Error in line 234: erINka7RmAm A774 95,2
Error in line 240: erINka7RmAm S4a 281,9
Error in line 235: l49TNc A774 7,7
Error in line 241: l49TNc S864 22,6
Error in line 249: Quq6 A774 -2,0
